tests/macro-tests/cases/property/method_cannot_be_property.stderr
error: methods cannot be properties
 --> cases/property/method_cannot_be_property.rs:6:25
  |
6 |     pub fn self_method1(self, input: impl IntoVar<bool>) -> UiNode {
  |                         ^^^^

error: methods cannot be properties
  --> cases/property/method_cannot_be_property.rs:12:25
   |
12 |     pub fn self_method2(self: Box<Self>, input: impl IntoVar<bool>) -> UiNode {
   |                         ^^^^
